# ska-oso-pht-services

./: .flake8  .flaskenv  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .readthedocs.yaml  .release  CHANGELOG.md  CODEOWNERS  Dockerfile  Makefile  README.md  data.json  lint.bat  pyproject.toml  test.py
docs/src/: conf.py  (+3 more)
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/: .dockerignore  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .release  CODEOWNERS  CONTRIBUTING.md  COPYRIGHT  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/.make/: .gitlab-ci.yml  README.md  bats.mk  python.mk
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/.make/tests/: Makefile
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/docs/src/: background.rst  conf.py  index.rst  json.rst  quickstart.rst
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/docs/src/api/schemas/: codec.rst  shared.rst
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/docs/src/layout/: entities.puml  layout.puml  layout.rst  schemas.puml  sdp_schemas.puml
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/: __init__.py
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/entities/: __init__.py
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/entities/common/: __init__.py  procedures.py  sb_definition.py  scan_definition.py  target.py
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/entities/csp/: common.py
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/entities/dish/: dish_allocation.py  (+1 more)
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/openapi/: __init__.py  eb-openapi-v1.yaml  oso-components-openapi-v1.yaml  prj-openapi-v1.yaml  sbd-openapi-v1.yaml  sbi-openapi-v1.yaml
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/src/ska_oso_pdm/schemas/: __init__.py  codec.py  shared.py
src/ska_oso_pht_services/openapi/__submodules__/ska-oso-pdm/tests/unit/ska_oso_pdm/: utils.py
(+158 files in other folders)
