[tool.poetry]
name = "ska-oso-pdm"
version = "9.0.0"
description = "SKA Project Data Model serialisation library"
authors = ["Team Buttons"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://gitlab.com/ska-telescope/oso/ska-oso-pdm"
documentation = "https://developer.skao.int/projects/ska-oso-pdm/en/latest/index.html"
keywords = ["SKA OSO"]
packages = [
    { include = "ska_oso_pdm", from = "src" }
]
include = [
    { path = 'tests' }
]
classifiers = [
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: BSD License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
]

[[tool.poetry.source]]
name = 'ska-nexus'
url = 'https://artefact.skao.int/repository/pypi-internal/simple'

[tool.poetry.dependencies]
python = "^3.8"
marshmallow = "^3.15.0"
marshmallow-oneofschema = "^3.0.1"
astropy = "^5.0.3"
marshmallow-enum = "^1.5.1"
connexion = "^2.14.1"
python-dateutil = "^2.8.2"

[tool.poetry.dev-dependencies]
black = "^22.10.0"
pytest = "^7.1.1"
pytest-cov = "^3.0.0"
pytest-forked = "^1.4.0"
pytest-json-report = "^1.5.0"
pycodestyle = "^2.8.0"
isort = "^5.10.1"
pylint-junit = "^0.3.2"
flake8 = "^4.0.1"
sphinx = "^4.3.2"
sphinx-rtd-theme = "^1.0.0"
deepdiff = "^5.7.0"

[tool.coverage.run]
parallel = true
branch = true
data_file = ".coverage/.coverage"

[tool.isort]
profile = "black"
line_length = 88
skip = "src/ska_oso_pdm/generated"

[tool.black]
line-length = 88
target-version = ['py37']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | src/ska_oso_pdm/generated
  )/
)
'''

[tool.pylint]
disable = "C,R,fixme"
ignore = "generated"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
